--- a/input/templates/index.html
+++ b/input/templates/index.html
@@ -7,10 +7,14 @@
   <body>
     <header>
       <div class="container">
-        <h1 class="logo">Ardit's web app</h1>
+        <h1 class="logo">Click the button</h1>
         <strong><nav>
           <ul class="menu">
-            <li><a href="http://google.com">Home</a></li>
+            <li>
+                <form action="/sendClick" method="post">
+                <button name="forwardBtn" type="submit">Click Me</button>
+                </form>
+            </li>
             <li><a href="http://google.com">About</a></li>
           </ul>
         </nav></strong>
