--- a/input/templates/index.html
+++ b/input/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Flask app</title>
+    <title>_stream4</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
     <script>
         function sendclick(vote){
@@ -18,13 +18,21 @@
     </script>
   </head>
   
-  <body>
-    <header>
-      <div class="container">
-        <h1 class="logo">Click the button</h1>
-      </div>
-    </header>
-    <button name="forwardBtn" onClick="sendclick('up')" >Vote Yes</button>
-    <button name="forwardBtn" onClick="sendclick('down')" >Vote No</button>
+  <body style="background-color:white;">
+
+    <!--<center>-->
+      <img src="{{url_for('static', filename='logo.jpg')}}" style="position:relative; left:12em; top:5em" height="350" > 
+      
+
+      <button onClick="sendclick('up')"   class="button" style=" background-color:#84f14e; color:#FFFFFF; border-radius:0.15em; box-sizing:border-box; text-decoration:none; font-weight:400; width:600px; height: 200px;  font-size:80px; padding:0.7em 1.4em; position:relative; left:2.5em; ">Vote Yes</button>
+
+
+
+      <button onClick="sendclick('down')" class="button" style="background-color:#eb4c02; color:#FFFFFF; border-radius:0.15em; box-sizing:border-box; text-decoration:none; font-weight:400; width:600px; height:200px; font-size:80px; padding:0.7em 1.4em; position:relative; left:2.5em; ">Vote No</button>
+
+
+      <img src="{{url_for('static', filename='sponsored.png')}}" style="position:absolute; bottom:5px; left:5px;" >
+
+    <!--</center>-->
   </body>
 </html>
